Change error in statistics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="page-2.html">Click Here ;)</a></li>
-
 			</ul>
 		</nav>
 		<article>
@@ -34,7 +33,7 @@
 				<tr>
 					<td>2012</td>
 					<td>The Avengers</td>
-					<td>$207.4 Million</td>
+					<td>$407.4 Million</td>
 					<td>Marvel</td>
 				</tr>
 				<tr>
@@ -83,17 +82,6 @@
 			<p><a href="https://en.wikipedia.org/wiki/List_of_highest-grossing_openings_for_films">Source</a></p>
 		</article>
 		<p>Clearly Marvel is killing it.</p>
-		<img src="deadpool_1.jpg">
-
-
-
-	<!-- the basic HTML structure elements found on every HTML page
-	some content that mixes header and paragraph tags
-	at least one image
-	at least two block-level elements that give semantic meaning to content
-	a table or form (you can submit to httpbin if you like, or to the other page of your site)
-	a list
-	at least one additional page that is linked from index.html -->
-
+		<img src="deadpool_1.jpg" alt="an image of deadpool with a thumbs up.">
 	</body>
 </html>
