Change header for way to test pull requests.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			</ul>
 		</nav>
 		<article>
-			<h1>Movie Success Comparison</h1>
+			<h1>DC vs Marvel Movie Success Comparison</h1>
 			<h2>A less than comprehensive list of various movie's successes</h2>
 			<div>
 				<p>Marvel and DC Movies have become increasingly popular in recent years.</p>
