Revise sentences as excuse to make a pull request

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h2>A less than comprehensive list of various movie's successes</h2>
 			<div>
 				<p>Marvel and DC Movies have become increasingly popular in recent years.</p>
-				<p>Here we will look at a chart looking at the top ten highest grossing superhero films.</p>
+				<p>Here we have a chart looking at the current top ten highest grossing superhero films.</p>
 			</div>
 			<table border="1">
 				<tr>
