--- a/index.html
+++ b/index.html
@@ -83,5 +83,17 @@
 		</article>
 		<p>Clearly Marvel is killing it.</p>
 		<img src="deadpool_1.jpg" alt="an image of deadpool with a thumbs up.">
+
+		<p><a href="http://marvelvsdccrossover.blogspot.com/">Here</a> is another website with information about Marvel and DC.</p>
+		<p>Some good things about this website:</p>
+		<ul>
+			<li>Clear seperation of blog posts, clear headers.</li>
+			<li>Easy to navigate old posts.</li>
+		</ul>
+		<p>Some not so good things about this website:</p>
+		<ul>
+			<li>Not maintained, all image links are now bad.</li>
+			<li>In the source code there are so many divs that it makes the code super hard to read.</li>
+		</ul>
 	</body>
 </html>
