--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Marvel vs DC</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
 		<nav>
