Add classes to table elements and id to footer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 				<li><a href="page-2.html">Click Here ;)</a></li>
 			</ul>
 		</nav>
+		<h1>DC vs Marvel Movie Success Comparison</h1> 
 		<article>
-			<h1>DC vs Marvel Movie Success Comparison</h1>
 			<h2>A less than comprehensive list of various movie's successes</h2>
 			<div>
 				<p>Marvel and DC Movies have become increasingly popular in recent years.</p>
@@ -27,55 +27,55 @@
 				</tr>
 				<tr>
 					<td>2016</td>
-					<td>Batman vs. Superman: Dawn of Justice</td>
+					<td class="italic">Batman vs. Superman: Dawn of Justice</td>
 					<td>$422.5 Million</td>
 					<td>DC</td>
 				</tr>
 				<tr>
 					<td>2012</td>
-					<td>The Avengers</td>
+					<td class="italic">The Avengers</td>
 					<td>$407.4 Million</td>
 					<td>Marvel</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>The Avengers: Age of Ultron</td>
+					<td class="italic">The Avengers: Age of Ultron</td>
 					<td>$392.5 Million</td>
 					<td>Marvel</td>
 				</tr>
 				<tr>
 					<td>2007</td>
-					<td>Spider-Man 3</td>
+					<td class="italic">Spider-Man 3</td>
 					<td>$381.6 Million</td>
 					<td>Marvel</td>
 				</tr>
 					<tr>
 					<td>2016</td>
-					<td>Captain America: Civil War</td>
+					<td class="italic">Captain America: Civil War</td>
 					<td>$379.5 Million</td>
 					<td>Marvel</td>
 				</tr>
 					<tr>
 					<td>2013</td>
-					<td>Iron Man 3</td>
+					<td class="italic">Iron Man 3</td>
 					<td>$372.5 Million</td>
 					<td>Marvel</td>
 				</tr>
 					<tr>
 					<td>2016</td>
-					<td>Suicide Squad</td>
+					<td class="italic">Suicide Squad</td>
 					<td>$266.9 Million</td>
 					<td>DC</td>
 				</tr>
 					<tr>
 					<td>2016</td>
-					<td>Deadpool</td>
+					<td class="italic">Deadpool</td>
 					<td>$264.7 Million</td>
 					<td>Marvel</td>
 				</tr>
 					<tr>
 					<td>2017</td>
-					<td>Guardians of the Galaxy Vol. 2</td>
+					<td class="italic">Guardians of the Galaxy Vol. 2</td>
 					<td>$252.5 Million</td>
 					<td>Marvel</td>
 				</tr>
@@ -86,15 +86,17 @@
 		<img src="deadpool_1.jpg" alt="an image of deadpool with a thumbs up.">
 
 		<p><a href="http://marvelvsdccrossover.blogspot.com/">Here</a> is another website with information about Marvel and DC.</p>
-		<p>Some good things about this website:</p>
-		<ul>
-			<li>Clear seperation of blog posts, clear headers.</li>
-			<li>Easy to navigate old posts.</li>
-		</ul>
-		<p>Some not so good things about this website:</p>
-		<ul>
-			<li>Not maintained, all image links are now bad.</li>
-			<li>In the source code there are so many divs that it makes the code super hard to read.</li>
-		</ul>
+		<footer id="footer">
+			<p class="list-title">Some good things about this website:</p>
+			<ul>
+				<li>Clear seperation of blog posts, clear headers.</li>
+				<li>Easy to navigate old posts.</li>
+			</ul>
+			<p class="list-title">Some not so good things about this website:</p>
+			<ul>
+				<li>Not maintained, all image links are now bad.</li>
+				<li>In the source code there are so many divs that it makes the code super hard to read.</li>
+			</ul>
+		</footer>
 	</body>
 </html>
